# JoinFlow

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  GITHUB_README.md  LICENSE  README.MD  README_EN.md  config.example.json  config.json  docker-compose.yml  main.py  pyproject.toml  run_gui_agent.py  run_task.py  smart_assistant.py  start.bat  start.sh  start_agent_os.bat  start_agent_os.sh  start_gui_agent.bat  start_gui_agent.sh
agent_os/: README.md  __init__.py  __main__.py  run.py
agent_os/api/: __init__.py
agent_os/core/: __init__.py  agent.py  config.py  runtime.py  session.py
agent_os/executors/: __init__.py  app_executor.py  base.py  browser_executor.py  compose_executor.py  file_executor.py  search_executor.py  system_executor.py
agent_os/intent/: __init__.py  parser.py  types.py
agent_os/llm/: __init__.py  client.py
agent_os/planner/: __init__.py  planner.py  task.py
agent_os/ui/: __init__.py  server.py
deploy/: README.md  cloud-deploy.ps1  cloud-deploy.sh  deploy.ps1  deploy.sh  docker-compose.cloud.yml  docker-compose.full.yml  docker-compose.prod.yml
deploy/kubernetes/: joinflow-deployment.yaml
deploy/monitoring/: prometheus.yml
deploy/nginx/: nginx.conf
deploy/scripts/: health-check.sh
joinflow_agent/: __init__.py  api.py  base.py  browser.py  browser_enhanced.py  code_executor.py  data_agent.py  llm.py  local_os_agent.py  model_manager.py  orchestrator.py  os_agent.py  session.py  task_queue.py  vision_agent.py
joinflow_agent/gui/: README.md  __init__.py  action_space.py  cli.py  code_executor.py  config.py  examples.py  grounding.py  gui_agent.py  memory.py  planner.py  prompts.py  screen_parser.py
joinflow_agent/multimodal/: __init__.py  audio.py  image.py  video.py
joinflow_core/: __init__.py  advanced_exporter.py  auth.py  cached_llm.py  checkpoint.py  errors.py  exporter.py  llm_providers.py  mcp_client.py  mcp_server.py  mcp_tools.py  plugins.py  qdrant_service.py  scheduler.py  statistics.py  suggestion.py  task_templates.py  types.py  webhooks.py  workflows.py
joinflow_index/: __init__.py  config.py  qdrant_store.py
joinflow_memory/: __init__.py  config.py  history.py  long_term_memory.py
joinflow_os_assistant/: README.md  __init__.py  __main__.py  cli.py
joinflow_os_assistant/api/: __init__.py  routes.py  server.py
joinflow_os_assistant/core/: __init__.py  assistant.py  config.py  context.py  memory.py
joinflow_os_assistant/examples/: basic_usage.py  with_llm.py
joinflow_os_assistant/executors/: __init__.py  app_executor.py  base.py  browser_executor.py  compose_executor.py  executor_registry.py  file_executor.py  search_executor.py  system_executor.py
joinflow_os_assistant/intent/: __init__.py  parser.py  patterns.py  types.py
joinflow_os_assistant/llm/: __init__.py  client.py  prompts.py
joinflow_os_assistant/planner/: __init__.py  strategies.py  task.py  task_planner.py
joinflow_rag/: assembler.py  engine.py  knowledge_base.py  rerankers.py  types.py
knowledge_base/: metadata.json
web/: api_extensions.py  browser_api.py  config.json  local_os_api.py  server.py  subscription.py
web/templates/: cloud.html  index.html  os_control.html  pricing.html  privacy.html  terms.html  workspace.html
workflows/: workflow.yml  workflows.json
workspace/: checkpoints.db  config.txt  memory.db
workspace/demo_memory/: experiences.json
workspace/experience_memory/: experiences.json
workspace/exports/: _20260109_183745.md  _20260109_183757.md  (+13 more)
(+29 files in other folders)
